# msa-sprint2

./: .gitignore  readme.md
hotelio-monolith/: Dockerfile
tasks/task2/results/booking-history-service/: README.md  pyproject.toml  task.md
tasks/task2/results/booking-history-service/app/: __init__.py  main.py  settings.py
tasks/task2/results/booking-history-service/app/common/: logging.py
tasks/task2/results/booking-history-service/app/domain/entities/: __init__.py  booking_history.py
tasks/task2/results/booking-history-service/app/domain/events/: __init__.py  booking_created.py
tasks/task2/results/booking-history-service/app/manager/: __init__.py
tasks/task2/results/booking-history-service/docker/: Dockerfile  docker-compose.yml
tasks/task2/results/booking-history-service/migrations/: env.py
tasks/task2/results/booking-history-service/migrations/versions/: bf996df72b83_create_models.py
tasks/task2/results/booking-service/: .dockerignore  README.md  alembic.ini  booking.proto  pyproject.toml  todo.md  todo2.md
tasks/task2/results/booking-service/app/: __init__.py  main.py  settings.py
tasks/task2/results/booking-service/app/common/: __init__.py  errors.py  logging.py  time.py
tasks/task2/results/booking-service/app/transport/: __init__.py
tasks/task2/results/booking-service/docker/: Dockerfile  docker-compose.yml
tasks/task2/results/booking-service/migrations/: env.py
tasks/task2/results/booking-service/migrations/versions/: 10731dc8cade_create_models.py
tasks/task2/results/booking-service/scripts/: generate_grpc.sh
test/: readme.md  (+1 more)
(+104 files in other folders)
