[project]
name = "booking-history-service"
version = "0.1.0"
description = "Kafka consumer service for storing booking history"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "structlog>=24.1",
    "tenacity>=8.2",
    "greenlet>=3.3.1",
    "aiokafka>=0.13.0",
]
