[project]
name = "booking-service"
version = "0.1.0"
description = "gRPC async booking service for Hotelio"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "grpcio>=1.60",
    "grpcio-tools>=1.60",
    "protobuf>=4.25",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "httpx>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "structlog>=24.1",
    "tenacity>=8.2",
    "greenlet>=3.3.1",
    "aiokafka>=0.13.0",
]
